# packaging_demo

./: .gitignore  README.md  setup.cfg
.github/workflows/: unit_tests.yml
src/package_password/: pass_generator.py
src/password_package/: pass_generator.py
tests/: test_pass_generator.py
