[metadata]
name = password-package-tobias-chc
version = 0.0.1
author = Tobias Chavarria
author_email = tobiaschc95@gmail.com
description = This package its just for understand how packaging works in Python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tobias-chc/password_package
project_urls =
    Bug Tracker = https://github.com/tobias-chc/password_package/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
